# poolpay-api

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: CONTRIBUTING.md  INDEX.md  RUNBOOK.md
src/: db.rs  extractor.rs  ingestion.rs  lib.rs  main.rs  models.rs  parser.rs  replies.rs  routing.rs  sheets.rs  whatsapp.rs
src/api/: admin_users.rs  auth.rs  auth_endpoints.rs  handlers.rs  mod.rs  models.rs
src/auth/: audit.rs  bootstrap.rs  compat.rs  extractors.rs  hmac.rs  jwt.rs  mod.rs  password.rs  rate_limit.rs  refresh.rs
tests/: api_integration.rs  auth_integration.rs  ingestion_integration.rs  parser_tests.rs  routing_integration.rs
