[package]
name = "poolpay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime — lets us write non-blocking code with async/await
tokio = { version = "1", features = ["full"] }

# HTTP client — used to talk to the Green API REST endpoints
reqwest = { version = "0.12", features = ["json"] }

# JSON serialisation / deserialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Loads variables from a .env file into the process environment
dotenv = "0.15"

# Tesseract OCR bindings
tesseract = "0.14"

# Regular expressions for receipt parsing
regex = "1"

# Structured logging — level filtering via RUST_LOG env var
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server — Axum REST API for the circle dashboard frontend
axum = "0.8"

# CORS middleware for the Axum server — permits localhost:3001 in development
tower-http = { version = "0.6", features = ["cors"] }

# SurrealDB embedded database — RocksDB engine, persists to ./data.surreal
surrealdb = { version = "3", features = ["kv-rocksdb", "kv-mem"] }
# Direct dep so the SurrealValue derive macro resolves surrealdb_types:: paths correctly
surrealdb-types = "3"

# Timestamp-based payment ID generation
chrono = { version = "0.4", features = ["serde"] }

# Constant-time comparison for auth tokens
subtle = "2"

# Password hashing — Argon2id with OWASP 2024 parameters
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }

# HMAC-SHA256 for NextAuth → backend request signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Rate limiting — tower-governor mounts a per-IP limiter on the auth endpoints;
# governor + dashmap back the composite (ip, email) failure limiter that blunts
# credential brute-force on /api/auth/verify-credentials
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor = "0.10"
dashmap = "6"

[dev-dependencies]
# HTTP service test utilities — used in API integration tests
tower = { version = "0.5", features = ["util"] }
# Read axum response bodies in integration tests
http-body-util = "0.1"
